Closed Bug 1639623 Opened 5 years ago Closed 5 years ago

When toggling radio button VO reports wrong state

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

STR:

  1. Load data:text/html,<fieldset><legend>Animal</legend><input type="radio" name="animal" value="cat" id="cat"><label for="cat">Cat</label><input type="radio" name="animal" value="dog" id="dog"><label for="dog">Dog</label></fieldset>
  2. Move VO cursor to cat radio button
  3. Activate radio button with VO+space

Result:
VO says: "check checkbox cat radio button"

Expected:
VO should say "selected, cat radio button"

Two things need to change:

  1. We have a custom action description that should go away. It makes us say "check checkbox". Safari and chrome don't have any custom descriptions and neither should we.
  2. VO is looking to perform AXPress on the radio button, since it does not find it (we have AXPick instead), it synthesizes a mouse click. This is async, so we don't have an opportunity to get a new checked state from content.
Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/17c8b0e56463 Support AXPress on radio buttons and remove action description. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: