Bug 1639623 - Support AXPress on radio buttons and remove action description. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D76175